# app/Validators/Tenders/UpdateValidator.ts
@@ -31,6 +31,10 @@ export default class UpdateValidator {
     ]),
     starting_price: schema.number.optional([rules.range(1, Number.MAX_SAFE_INTEGER)]),
     duration: schema.string.optional({ trim: true }, [rules.duration()]),
+    technical_specification: schema.file.optional({
+      size: '8mb',
+      extnames: ['pdf', 'docx'],
+    }),
   })
 
   /**
